@@ -78,6 +78,7 @@
     <branch repo="python"
 	    module="2.5.2/Python-2.5.2.tar.bz2" version="2.5.2"
 	    size="9807597" md5sum="afb5451049eda91fbde10bd5a4b7fadc">
+      <patch file="python-2.5.2-lib64.patch" strip="1" />
     </branch>
   </autotools>
 
