@@ -1,3 +1,9 @@
+2008-12-23  Frederic Peters  <fpeters@0d.be>
+
+	* modulesets/bootstrap.modules, patches/python-2.5.2-lib64.patch:
+	reenabled python patch, after the removal of a Mandriva specific
+	part.
+
 2008-12-22  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-suites-2.26.modules: updated GTK+ to use trunk.
